[Release 21.1.46] 添加被点燃 ITNT 和 Nuke 的实体翻译
- 清理代码格式